整合了前六个到jupyter里

--- a/code/1.时间序列输入数据集.ipynb
+++ b/code/1.时间序列输入数据集.ipynb
@@ -143,13 +143,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,7 +167,7 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "# 读取Excel文件\n",
-    "df = pd.read_excel('weather_data.xlsx')\n",
+    "df = pd.read_excel(r'../data/weather_data.xlsx')\n",
     "\n",
     "# 将数据框转换为numpy数组\n",
     "data = df.values\n",
