--- a/code/2.notebook整合.ipynb
+++ b/code/2.notebook整合.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,12 +848,12 @@
     "            if val_loss < min_val_loss:\n",
     "                min_val_loss = val_loss\n",
     "                best_model = copy.deepcopy(model)\n",
-    "                # count = 0\n",
-    "            # else:\n",
-    "            #     count += 1\n",
-    "            #     if count >= 25:\n",
-    "            #         print(\"Early stopping\")\n",
-    "            #         break\n",
+    "                count = 0\n",
+    "            else:\n",
+    "                count += 1\n",
+    "                if count >= 25:\n",
+    "                    print(\"Early stopping\")\n",
+    "                    break\n",
     "        if (epoch + 1) % 50 == 0:\n",
     "            print('epoch {:03d} train_loss {:.8f} val_loss {:.8f}'.format(epoch, np.mean(train_loss), val_loss))\n",
     "        model.train()\n",
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3262,8 +3262,9 @@
     "\n",
     "file_name='data.csv'\n",
     "data=load_data(file_name)\n",
-    "flag = 'mm'\n",
+    "flag = 'mo'\n",
     "arg = args.cl_mm_args_parser()\n",
+    "arg.epochs = 100\n",
     "Dtr, Val, Dte, m, n = data_process(data,arg, flag)\n",
     "train(arg, Dtr, Val, LSTM_PATH,flags=2) #flags=2表示CNN-LSTM\n",
     "test(arg, Dte, LSTM_PATH, m, n,flags=2)"
